Added Menu and FAQ, among other tweaks

--- a/index.html
+++ b/index.html
@@ -15,16 +15,17 @@
   <header>
     <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
 		<a class="navbar-brand" href="index.html">
-			S &amp; K &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 09.08.24
+			S &amp; K &nbsp; &nbsp; FITZGERALD
 		</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent1" aria-controls="navbarSupportedContent1" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent1">
         <ul class="navbar-nav ml-auto">
-  	          <li class="nav-item active"> <a class="nav-link" href="#top">Home <span class="sr-only">(current)</span></a> </li>
-  	          <li class="nav-item"> <a class="nav-link" href="#details">Details</a> </li>
-          <li class="nav-item"> <a class="nav-link" href="#locations">Locations</a></li>
-			<li class="nav-item"> <a class="nav-link" href="#transportation">Transportation</a></li>
-		  </ul>
+		  <li class="nav-item active"> <a class="nav-link" href="#top">Home <span class="sr-only">(current)</span></a> </li>
+		  <li class="nav-item"> <a class="nav-link" href="#details">Details</a></li>
+		  <li class="nav-item"> <a class="nav-link" href="#locations">Locations</a></li>
+			<li><a class="nav-link" href="#menu">Menu</a></li>
+		  <li class="nav-item"> <a class="nav-link" href="#faq">Q &amp; A</a></li>
+		</ul>
       </div>
     </nav>
     </header>
@@ -34,6 +35,8 @@
 			<li data-target="#wedding-carousel" data-slide-to="0" class="active"></li>
 			<li data-target="#wedding-carousel" data-slide-to="1"></li>
 			<li data-target="#wedding-carousel" data-slide-to="2"></li>
+			<li data-target="#wedding-carousel" data-slide-to="3"></li>
+			<li data-target="#wedding-carousel" data-slide-to="4"></li>
 		  </ol>
 		  <div class="carousel-inner">
 			<div class="carousel-item active">
@@ -58,6 +61,22 @@
 				  <p class="lead">Find out where you need to go:</p>
 				  <hr class="my-4">
 				  <a class="btn btn-primary btn-lg" href="#locations" role="button">Locations</a>
+				</div>
+			</div>
+			<div class="carousel-item">
+			  <div class="jumbotron jumbotron-fluid" id="hero4">
+				<h1 class="display-4">What's for dinner?</h1>
+				  <p class="lead">Take a look at our stunning menu:</p>
+				  <hr class="my-4">
+				  <a class="btn btn-primary btn-lg" href="#menu" role="button">Menu</a>
+				</div>
+			</div>
+			<div class="carousel-item">
+			  <div class="jumbotron jumbotron-fluid" id="hero5">
+				<h1 class="display-4">Got questions?</h1>
+				  <p class="lead">Take a look out our Q &amp; A here:</p>
+				  <hr class="my-4">
+				  <a class="btn btn-primary btn-lg" href="#faq" role="button">Q &amp; A</a>
 				</div>
 			</div>
 		  </div>
@@ -86,7 +105,7 @@
 					Nenagh, Co. Tipperary E45 YH29</p>
 
 					<h3>RECEPTION</h3>
-					<p>From 3:00PM at Heritage House,<br>
+					<p>From 3:30PM at Hermitage House,<br>
 					Ballymackey, Nenagh, Co. Tipperary<br>
 					E45 EH64</p>
 					<p>Call to dinner at 5:00PM</p>
@@ -103,7 +122,6 @@
 					<br>
 				</div>
 			</div>
-			
 		</section>
 		<section class="container-fluid" id="locations">
 			<h2 class="title">How to get There</h2>
@@ -124,7 +142,7 @@
 				<div class="row">
 					<div class="col locations">
 						<h3>RECEPTION</h3>
-						<p>Heritage House,<br>
+						<p>Hermitage House,<br>
 						Ballymackey, Nenagh,<br>
 						Co. Tipperary<br>
 						E45 EH64</p>
@@ -146,40 +164,173 @@
 					</div>
 				</div>
 			</div>
-			<br>
+			<br><br>
 		</section>
-		<section class="container-fluid" id="transportation">
+		<section id="menu" class="container-fluid">
 			<div class="row">
-				<div class="col-md-6">
-					<img src="images/Susan and Kevin Standing BNW 2.png" alt="Kevin and Susan" class="img-fluid">
+				<div class="col-md-6 order-2 order-lg-1">
+					<h2>The Menu</h2>
+					<h3>Starters</h3>
+					<p class="menutext">Trio of Irish seafood salad. Lemon and garlic butterflied Dublin bay prawns, smoked clare island salmon,
+					cajun salmon, rocket, lemon and glenisk yoghurt dressing.<br>
+					Smooth chicken liver parfait, warm brioche toast with apple and chilli jam.</p>
+					<h3>Main Course</h3>
+					<p class="menutext">Hog on a Spit<br>Chicken, Mushroom &amp; Tarragon<br>Beef Bourguignon<br>Mexican chickpea &amp; bean stew &#40;Vegan&#41;</p>
+					<h3>Green Salads</h3>
+					<p class="menutext">Beetroot, orange &amp; watercress salad, toasted sesame dressing<br>
+					Cherry tomatoes, feta &amp; black olive salad, broccoli florets, toasted almond</p>
+					<h3>Sides</h3>
+					<p class="menutext">Baby boiled potatoes<br>Steamed Rice</p>
+					<h3>Dessert + Tea or Coffee</h3>
+					<p class="menutext">Italian style tiramisu with mascaphone cream, dusted with Bourneville cocoa<br>
+					Dark chocolate &amp; coconut torte with berry jus</p>
 				</div>
-				<div class="col-md-6">
-					<h2 class="title">Transport</h2>
-					<div class="text">
-						<h3>Transportation Phone Number: 086 348 2276</h3>
-						<h3>Please call for quote and booking.</h3>
-					</div>
+				<div class="col-md-6 order-1 order-lg-2">
+					<img src="images/Susan and Kevin Kiss BNW - 2.png" alt="Kevin and Susan" class="img-fluid">
 				</div>
 			</div>
+		</section>
+		<section class="container-fluid" id="faq">
+			<div class="row">
+				<div class="col-md-6">
+					<img src="images/Susan and Kevin Standing BNW.png" alt="Kevin and Susan" class="img-fluid">
+				</div>
+				<div class="col-md-6">
+					<h2 class="title">Frequently Asked Questions</h2>
+				  <div id="accordion1" role="tablist">
+					  <div class="card">
+					    <div class="card-header" role="tab" id="headingOne1">
+					      <h5 class="mb-0"> <a data-toggle="collapse" href="#collapseOne1" role="button" aria-expanded="true" aria-controls="collapseOne1"> Ceremony </a> </h5>
+				        </div>
+					    <div id="collapseOne1" class="collapse show" role="tabpanel" aria-labelledby="headingOne1" data-parent="#accordion1">
+					      <div class="card-body">
+							  <p class="qst">When is the ceremony?</p>
+							  <p class="ans">The ceremony is at 13:00 on Friday August 9th</p>
+							  <p class="qst">What is the location for the ceremony?</p>
+							  <p class="ans">The ceremony will take place at St. Mary's of the Rosary Church, Nenagh E45 YH29</p>
+							</div>
+				        </div>
+				    </div>
+					  <div class="card">
+					    <div class="card-header" role="tab" id="headingTwo1">
+					      <h5 class="mb-0"> <a class="collapsed" data-toggle="collapse" href="#collapseTwo1" role="button" aria-expanded="false" aria-controls="collapseTwo1"> Photographs </a> </h5>
+				        </div>
+					    <div id="collapseTwo1" class="collapse" role="tabpanel" aria-labelledby="headingTwo1" data-parent="#accordion1">
+					      <div class="card-body">
+							  <p class="ans">There will be a group photograph before everyone leaves the church. &#40;need to confirm photograph details&#41;</p>
+							  <p class="ans">There will be a QR code available at our Day 2 event, it would be great if you could send us any pictures/videos you take of our day.</p>
+						  </div>
+				        </div>
+				    </div>
+					  <div class="card">
+					    <div class="card-header" role="tab" id="headingThree1">
+					      <h5 class="mb-0"> <a class="collapsed" data-toggle="collapse" href="#collapseThree1" role="button" aria-expanded="false" aria-controls="collapseThree1"> Dress Code </a> </h5>
+				        </div>
+					    <div id="collapseThree1" class="collapse" role="tabpanel" aria-labelledby="headingThree1" data-parent="#accordion1">
+					      <div class="card-body">
+							  <p class="ans">The dress code is elegance, bring your A-Game &#128521;</p>
+							</div>
+				        </div>
+				    </div>
+					<div class="card">
+					    <div class="card-header" role="tab" id="headingFour1">
+					      <h5 class="mb-0"> <a class="collapsed" data-toggle="collapse" href="#collapseFour1" role="button" aria-expanded="false" aria-controls="collapseFour"> Footwear </a> </h5>
+				        </div>
+					    <div id="collapseFour1" class="collapse" role="tabpanel" aria-labelledby="headingFour1" data-parent="#accordion1">
+					      <div class="card-body">
+							  <p class="ans">It will be a garden wedding so there may be times you will be on grass. For comfort it may be a good idea to pack some flat shoes. For any ladies wearing heels there will be heel plugs available in the ladies toilets. Block heels will also be a suitable choice.</p>
+							</div>
+				        </div>
+				    </div>
+					<div class="card">
+					    <div class="card-header" role="tab" id="headingFive1">
+					      <h5 class="mb-0"> <a class="collapsed" data-toggle="collapse" href="#collapseFive1" role="button" aria-expanded="false" aria-controls="collapseFive1"> Reception </a> </h5>
+				        </div>
+					    <div id="collapseFive1" class="collapse" role="tabpanel" aria-labelledby="headingFive1" data-parent="#accordion1">
+					      <div class="card-body">
+							  <p class="qst">Where is the reception venue?</p>
+							  <p class="ans">The Reception will take place at Hermitage House Ballymacky E45 EH64</p>
+							  <p class="qst">What time does the reception start at? </p>
+							  <p class="ans">The reception will start with a champagne reception from 15.30</p>
+							  <p class="qst">Will the reception be indoors or outdoors? </p>
+							  <p class="ans">If the weather is fine, the champagne reception will be outdoors. However there will be arrangements made if not. The rest of the reception will be held indoors. </p>
+							  <p class="qst">Can I use card at the reception?</p>
+							  <p class="ans">There will be card facilities at the reception however the bar has asked if all guest could also bring cash on the off chance that there is an issue with the connection &#40;we are in the Tipperary countryside&#41;</p>
+							</div>
+				        </div>
+				    </div>
+					<div class="card">
+					    <div class="card-header" role="tab" id="headingSix">
+					      <h5 class="mb-0"> <a class="collapsed" data-toggle="collapse" href="#collapseSix1" role="button" aria-expanded="false" aria-controls="collapseSix1"> Travel to and from the wedding venue </a> </h5>
+				        </div>
+					    <div id="collapseSix1" class="collapse" role="tabpanel" aria-labelledby="headingSix1" data-parent="#accordion1">
+					      <div class="card-body">
+							  <p class="qst">What is the best way to travel to the wedding venue?</p>
+							  <p class="ans">It will be best to drive to the wedding venue. If you can carpool, that would be a great option too. </p>
+							  <p class="qst">What is the best way to get home at the end of the night? </p>
+							  <p class="ans">There is a bus organised that will be making trips throughout the night. It’s best to pre book the bus if you will be travelling a distance from Nenagh. Also best to travel with other guests going in the same direction. </p>
+							  <p class="ans"><b><u>Please note:</u></b> cash will be needed for the bus service at the end of the night.</p>
+							  <p class="ans"><b><u>Contact number for the bus service:</u></b> 086 3482276</p>
+							</div>
+				        </div>
+				    </div>
+					<div class="card">
+					    <div class="card-header" role="tab" id="headingSeven1">
+					      <h5 class="mb-0"> <a class="collapsed" data-toggle="collapse" href="#collapseSeven1" role="button" aria-expanded="false" aria-controls="collapseSeven1"> Parking </a> </h5>
+				        </div>
+					    <div id="collapseSeven1" class="collapse" role="tabpanel" aria-labelledby="headingSeven1" data-parent="#accordion1">
+					      <div class="card-body">
+							  <p class="ans">There will be parking available on site. There will be someone on site to direct parking. You can come and collect your car the following day.</p>
+							</div>
+				        </div>
+				    </div>
+					<!--<div class="card">
+					    <div class="card-header" role="tab" id="headingEight1">
+					      <h5 class="mb-0"> <a class="collapsed" data-toggle="collapse" href="#collapseEight1" role="button" aria-expanded="false" aria-controls="collapseEight1"> Accommodation </a> </h5>
+				        </div>
+					    <div id="collapseEight1" class="collapse" role="tabpanel" aria-labelledby="headingEight1" data-parent="#accordion1">
+					      <div class="card-body">
+							  <p class="ans">There is no accommodation on site but there are options in Nenagh and surrounding areas. List of accommodation options ` here`.</p>
+							</div>
+				        </div>
+				    </div>-->
+					<div class="card">
+					    <div class="card-header" role="tab" id="headingNine1">
+					      <h5 class="mb-0"> <a class="collapsed" data-toggle="collapse" href="#collapseNine1" role="button" aria-expanded="false" aria-controls="collapseNine1"> Day Two Arrangements </a> </h5>
+				        </div>
+					    <div id="collapseNine1" class="collapse" role="tabpanel" aria-labelledby="headingNine1" data-parent="#accordion1">
+					      <div class="card-body">
+							  <p class="qst">Where will day 2 events take place?</p>
+							  <p class="ans">Day 2 will be in Tom’s Bar Templemore</p>
+							  <p class="qst">What time are things kicking off on day 2?</p>
+							  <p class="ans">Day 2 will kick off at around 4pm on August 10th</p>
+							  <p class="qst">What is happening Day 2?</p>
+							  <p class="ans">We are having music and a BBQ at Tom’s bar Templemore</p>
+							  <p class="qst">What is the best way to travel?</p>
+							  <p class="ans">Best to drive here or get a taxi. There isn’t any public transport available</p>
+							</div>
+				        </div>
+				    </div>
+				  </div>
+                </div>
+			</div>
+			<br>
 		</section>
     </main>
 	<footer>
 		<div class="footer-content text-center">
 			<div class="row">
-				<div class="col-xl-4">
-					<h3>Give us a Ring</h3>
-					<p>Kevin | 086 398 6107<br>
-					Susan | 085 770 9976</p>
+				<div class="col-xl-6">
+					<h2 class="footerlogo">S &amp; K</h2>
+					<h2 class="footerlogo">FITZGERALD</h2>
 				</div>
-				<div class="col-xl-4">
-					<h2 class="title">S &amp; K</h2>
-				</div>
-				<div class="col-xl-4">
-					<h3>Menu</h3>
+				<div class="col-xl-6">
+					<h3>Links</h3>
 					<ul class="footer-nav">
 						<li><a href="#details">Wedding Details</a></li>
 						<li><a href="#locations">Locations</a></li>
-						<li><a href="#transportation">Transportation</a></li>
+						<li><a href="#menu">Menu</a></li>
+						<li><a href="#faq">Q &amp; A</a></li>
 					</ul>
 				</div>
 			</div>
@@ -189,7 +340,7 @@
 					<p>&copy; Alan Fitzgerald - 2024 - For Kev' And Suz'</p>
 				</div>
 				<div class="col">
-					<p>All copyrighted material belongs to its rightful owners</p>
+					<p>All other copyrighted material belong to their rightful owners</p>
 				</div>
 			</div>
 		</div>
